[gd_scene load_steps=27 format=3 uid="uid://ban2a0lojr403"]

[ext_resource type="Script" path="res://gamedata/actors/PLAYER/player.gd" id="1_5ryu4"]
[ext_resource type="Texture2D" uid="uid://cr0b05x771jmp" path="res://gamedata/Redfront/res_Legacy/ui/cross.png" id="2_r17nk"]
[ext_resource type="PackedScene" uid="uid://v26e0bsqk3cj" path="res://bin/bot system/state_machine_master.tscn" id="4_4ytik"]
[ext_resource type="PackedScene" uid="uid://jmk61v8y31s" path="res://bin/bot system/state.tscn" id="5_svp1l"]
[ext_resource type="PackedScene" uid="uid://c1vo6muaheqv1" path="res://gamedata/actors/PLAYER/player_model.tscn" id="6_dfie5"]

[sub_resource type="BoxShape3D" id="BoxShape3D_dge86"]
size = Vector3(32, 0, 32)

[sub_resource type="BoxShape3D" id="BoxShape3D_2yxt1"]
size = Vector3(0.35, 2.093, 0.315)

[sub_resource type="BoxShape3D" id="BoxShape3D_rsh3e"]
size = Vector3(0.65, 3, 0.675)

[sub_resource type="SphereShape3D" id="SphereShape3D_0opao"]
radius = 2.22666

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_h663q"]
animation = &"Default"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3s62v"]
animation = &"injured"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_vf7t1"]
filter_enabled = true
filters = ["star", "star/Skeleton3D:foot.R", "star/Skeleton3D:pelvis.L", "star/Skeleton3D:shin.R", "star/Skeleton3D:spine.001", "star/Skeleton3D:spine.002", "star/Skeleton3D:spine.003", "star/Skeleton3D:spine.004", "star/Skeleton3D:spine.005", "star/Skeleton3D:spine.006", "star/Skeleton3D:thigh.R"]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_n5xwb"]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_i0xe8"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k8per"]
animation = &"turn_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wwubl"]
animation = &"turn_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3ka27"]
animation = &"sprint"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gtlnk"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tf3py"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sd5vx"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kmq3s"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_k1mm1"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_otj8i"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xxm05"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_2natv"]
states/End/position = Vector2(573.333, 58.6667)
states/Start/position = Vector2(-88, -97.3334)
states/turn_left/node = SubResource("AnimationNodeAnimation_k8per")
states/turn_left/position = Vector2(-41, 114.37)
states/turn_right/node = SubResource("AnimationNodeAnimation_wwubl")
states/turn_right/position = Vector2(295, 87.1107)
states/walk/node = SubResource("AnimationNodeAnimation_3ka27")
states/walk/position = Vector2(138.556, -79.2593)
transitions = ["Start", "walk", SubResource("AnimationNodeStateMachineTransition_gtlnk"), "walk", "turn_left", SubResource("AnimationNodeStateMachineTransition_tf3py"), "turn_left", "walk", SubResource("AnimationNodeStateMachineTransition_sd5vx"), "turn_left", "turn_right", SubResource("AnimationNodeStateMachineTransition_kmq3s"), "turn_right", "turn_left", SubResource("AnimationNodeStateMachineTransition_k1mm1"), "turn_right", "walk", SubResource("AnimationNodeStateMachineTransition_otj8i"), "walk", "turn_right", SubResource("AnimationNodeStateMachineTransition_xxm05")]
graph_offset = Vector2(-530, -212)

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_igvs0"]
graph_offset = Vector2(-257.32, -44.213)
nodes/Animation/node = SubResource("AnimationNodeAnimation_3s62v")
nodes/Animation/position = Vector2(0, 266.667)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_h663q")
"nodes/Animation 2/position" = Vector2(-320, 186.667)
nodes/Blend2/node = SubResource("AnimationNodeBlend2_vf7t1")
nodes/Blend2/position = Vector2(346.667, 53.3333)
nodes/Move_Intensity/node = SubResource("AnimationNodeBlend2_n5xwb")
nodes/Move_Intensity/position = Vector2(0, 0)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_i0xe8")
nodes/TimeScale/position = Vector2(186.667, 26.6667)
nodes/Top_Movement/node = SubResource("AnimationNodeStateMachine_2natv")
nodes/Top_Movement/position = Vector2(-320, -53.3333)
nodes/output/position = Vector2(586.667, 53.3333)
node_connections = [&"Blend2", 0, &"TimeScale", &"Blend2", 1, &"Animation", &"Move_Intensity", 0, &"Top_Movement", &"Move_Intensity", 1, &"Animation 2", &"TimeScale", 0, &"Move_Intensity", &"output", 0, &"Blend2"]

[node name="player" type="CharacterBody3D"]
collision_layer = 0
collision_mask = 8
input_ray_pickable = false
script = ExtResource("1_5ryu4")
Sprite_node = ExtResource("2_r17nk")

[node name="camera_follow_player" type="Marker3D" parent="."]
process_mode = 3
top_level = true

[node name="camera_locator" type="Marker3D" parent="."]
top_level = true

[node name="camera_pivot" type="Marker3D" parent="camera_locator"]

[node name="Camera3D" type="Camera3D" parent="camera_locator/camera_pivot"]
transform = Transform3D(-1, 6.18172e-08, -6.18172e-08, 0, 0.707107, 0.707107, 8.74227e-08, 0.707107, -0.707107, 0, 75, -75)
current = true
fov = 5.0

[node name="Area3D" type="Area3D" parent="camera_locator/camera_pivot"]
collision_layer = 32768
collision_mask = 32768

[node name="CollisionShape3D" type="CollisionShape3D" parent="camera_locator/camera_pivot/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.33223, 0)
shape = SubResource("BoxShape3D_dge86")

[node name="character_waypoint" type="CharacterBody3D" parent="."]
top_level = true
collision_layer = 257
collision_mask = 257
input_ray_pickable = false
axis_lock_linear_y = true
axis_lock_angular_x = true
axis_lock_angular_z = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="character_waypoint"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.10065, 0)
shape = SubResource("BoxShape3D_2yxt1")

[node name="hitbox" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.08227, 0)
shape = SubResource("BoxShape3D_rsh3e")

[node name="detection_radius" type="Area3D" parent="."]
collision_layer = 32
collision_mask = 192
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="detection_radius"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.646406, 0)
shape = SubResource("SphereShape3D_0opao")

[node name="stamina_bar_location" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.383141, 0)

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../PLAYER_MODEL")
root_motion_track = NodePath("metarig/Skeleton3D:spine")
tree_root = SubResource("AnimationNodeBlendTree_igvs0")
anim_player = NodePath("../PLAYER_MODEL/AnimationPlayer")
parameters/Blend2/blend_amount = 0.0
parameters/Move_Intensity/blend_amount = 0.5
parameters/TimeScale/scale = 0.5

[node name="PLAYER_MODEL" parent="." instance=ExtResource("6_dfie5")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="star" parent="PLAYER_MODEL" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="Skeleton3D" parent="PLAYER_MODEL/star" index="0"]
bones/1/rotation = Quaternion(-0.0644765, 1.22242e-07, -7.10951e-09, 0.997919)
bones/2/rotation = Quaternion(-0.0774642, -1.2145e-07, -1.11561e-08, 0.996995)
bones/3/rotation = Quaternion(0.100141, 1.21902e-07, 1.1e-08, 0.994973)
bones/4/rotation = Quaternion(0.221666, -2.27272e-07, -5.37088e-10, 0.975123)
bones/5/rotation = Quaternion(-0.0838356, 2.49518e-07, -7.00957e-10, 0.99648)
bones/6/rotation = Quaternion(-0.150497, 1.15331e-07, -5.31708e-08, 0.98861)
bones/8/rotation = Quaternion(-0.325211, 0.652496, -0.477585, 0.490305)
bones/9/rotation = Quaternion(0.181859, 0.122856, 0.0533742, 0.974159)
bones/10/rotation = Quaternion(-0.070928, -0.0189093, -0.0255912, 0.996974)
bones/12/rotation = Quaternion(0.0941613, -0.0424421, -0.111036, 0.988435)
bones/13/rotation = Quaternion(0.0363992, -0.0327946, 0.0174122, 0.998647)
bones/14/rotation = Quaternion(0.0326628, -0.0661306, 0.0124829, 0.997198)
bones/16/rotation = Quaternion(-0.0251512, -0.0322431, 0.135906, 0.989878)
bones/17/rotation = Quaternion(0.00809764, 0.00552905, -0.107806, 0.994124)
bones/19/rotation = Quaternion(0.0554635, -0.0129114, -0.189923, 0.980146)
bones/20/rotation = Quaternion(0.0256647, -0.0348915, 0.0302801, 0.998603)
bones/21/rotation = Quaternion(0.0227967, -0.0301673, -0.000668799, 0.999285)
bones/23/rotation = Quaternion(0.0251751, -0.0582372, -0.00546331, 0.99797)
bones/24/rotation = Quaternion(0.0214468, 0.0425155, -0.0129802, 0.998781)
bones/25/rotation = Quaternion(0.0272806, -0.071655, 0.00899016, 0.997016)
bones/27/rotation = Quaternion(0.183633, 0.00020067, -0.00657256, 0.982973)
bones/28/rotation = Quaternion(-0.0133413, -0.153826, -0.000651634, 0.988008)
bones/29/rotation = Quaternion(-0.000321199, 0.0575478, 0.00250152, 0.99834)
bones/31/rotation = Quaternion(0.325211, 0.652496, -0.477585, -0.490305)
bones/32/rotation = Quaternion(0.181859, -0.122856, -0.0533742, 0.974159)
bones/33/rotation = Quaternion(-0.070928, 0.0189093, 0.0255912, 0.996974)
bones/35/rotation = Quaternion(0.0941614, 0.0424421, 0.111036, 0.988435)
bones/36/rotation = Quaternion(0.0363992, 0.0327946, -0.0174122, 0.998647)
bones/37/rotation = Quaternion(0.0326628, 0.0661306, -0.0124829, 0.997198)
bones/39/rotation = Quaternion(-0.0251512, 0.032243, -0.135906, 0.989878)
bones/40/rotation = Quaternion(0.00809765, -0.00552898, 0.107806, 0.994124)
bones/42/rotation = Quaternion(0.0554635, 0.0129114, 0.189923, 0.980146)
bones/43/rotation = Quaternion(0.0256647, 0.0348915, -0.0302801, 0.998603)
bones/44/rotation = Quaternion(0.0227967, 0.0301673, 0.000668796, 0.999285)
bones/46/rotation = Quaternion(0.0251751, 0.0582371, 0.00546331, 0.99797)
bones/47/rotation = Quaternion(0.0214468, -0.0425156, 0.0129802, 0.998781)
bones/48/rotation = Quaternion(0.0272807, 0.0716547, -0.00899016, 0.997016)
bones/50/rotation = Quaternion(0.183633, -0.000200691, 0.00657261, 0.982973)
bones/51/rotation = Quaternion(-0.0133414, 0.153826, 0.000651661, 0.988008)
bones/52/rotation = Quaternion(-0.000321189, -0.0575478, -0.00250153, 0.99834)
bones/55/rotation = Quaternion(0.184099, 0.769635, 0.361375, -0.493131)
bones/57/rotation = Quaternion(0.994083, 0.019555, -0.00679578, 0.106636)
bones/58/rotation = Quaternion(0.0288316, 0.00812836, 0.0201354, 0.999348)
bones/59/rotation = Quaternion(-0.728883, -0.00195113, -0.00211745, 0.684632)
bones/60/rotation = Quaternion(0.994083, -0.019555, 0.00679576, 0.106636)
bones/61/rotation = Quaternion(0.0288316, -0.00812834, -0.0201354, 0.999348)
bones/62/rotation = Quaternion(-0.728883, 0.00195111, 0.00211745, 0.684632)

[node name="State Machine Master" parent="." node_paths=PackedStringArray("first_state") instance=ExtResource("4_4ytik")]
first_state = NodePath("wait")

[node name="wait" parent="State Machine Master" node_paths=PackedStringArray("next_if_True") instance=ExtResource("5_svp1l")]
State_Constant = "AAAA"
state_types = "SLEEP"
next_if_True = NodePath("../wait2")
print_a_line = true
print_line = "Hello"
Sleep_time = 5.0

[node name="wait2" parent="State Machine Master" instance=ExtResource("5_svp1l")]
State_Constant = "FFUUV"
state_types = "SLEEP"
print_a_line = true
print_line = "Hi"
Sleep_time = 5.0

[connection signal="input_event" from="camera_locator/camera_pivot/Area3D" to="." method="_on_area_3d_input_event"]

[editable path="PLAYER_MODEL"]
